--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>langchain4j-community-dashscope-spring-boot-starter</artifactId>
             <version>${langchain.version}</version>
         </dependency>
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-easy-rag</artifactId>
+            <version>${langchain.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
