--- a/pom.xml
+++ b/pom.xml
@@ -80,8 +80,12 @@
             <artifactId>langchain4j-easy-rag</artifactId>
             <version>${langchain.version}</version>
         </dependency>
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-pgvector</artifactId>
+            <version>${langchain.version}</version>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
