--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,5 +9,14 @@ langchain4j:
       chat-model:
         api-key: sk-56e46db3b35443c2a0fc282db68a81c2
         model-name: qwen-plus
-#        model-name: deepseek-v3
+      embedding-model:
+        api-key: sk-56e46db3b35443c2a0fc282db68a81c2
+        model-name: text-embedding-v3
+pgvector:
+  database: springai
+  host: 127.0.0.1
+  port: 5432
+  user: postgres
+  password: 123456@Root
+  table: my_embeddings
 
