--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ langchain4j:
         api-key: sk-56e46db3b35443c2a0fc282db68a81c2
         model-name: text-embedding-v3
 pgvector:
-  database: springai
+  database: ai
   host: 127.0.0.1
   port: 5432
   user: postgres
