--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,9 +18,9 @@ langchain4j:
       streaming-chat-model:
         api-key: sk-56e46db3b35443c2a0fc282db68a81c2
         model-name: qwen-plus
-      embedding-model:
-        api-key: sk-56e46db3b35443c2a0fc282db68a81c2
-        model-name: text-embedding-v2
+#      embedding-model:
+#        api-key: sk-56e46db3b35443c2a0fc282db68a81c2
+#        model-name: text-embedding-v2
 pgvector:
   database: ai
   host: 127.0.0.1
