--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,10 +14,10 @@ langchain4j:
     dashscope:
       chat-model:
         api-key: sk-56e46db3b35443c2a0fc282db68a81c2
-        model-name: qwen-plus
+        model-name: qwen-max
       streaming-chat-model:
         api-key: sk-56e46db3b35443c2a0fc282db68a81c2
-        model-name: qwen-plus
+        model-name: qwen-max
 #      embedding-model:
 #        api-key: sk-56e46db3b35443c2a0fc282db68a81c2
 #        model-name: text-embedding-v2
